Resolve issues found in manual testing of prometheus pushgateway